
[package]
name = "mini-redis"
version = "0.1.0"
authors = ["Kariuki George"]
edition = "2021"


[dependencies]
anyhow = "1.0.59"                                   # error handling
atoi = "2.0.0"
bytes = "1.5.0"
chrono = "0.4.33"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
