
[package]
name = "mini-redis"
version = "0.1.0"
authors = ["Kariuki George"]
edition = "2021"


[dependencies]
atoi = "2.0.0"
bytes = "1.5.0"
chrono = "0.4.33"
dotenv = "0.15.0"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
